k8s/product/ai/test/ai-deploy-msi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tws-ai-msi-deploy
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tws-ai
  template:
    metadata:
      labels:
        app: tws-ai
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - ubuntu-msi
      containers:
      - name: tws-ai
        image: dodo133/tws-ai:local
        # env:
        # - name: NVIDIA_VISIBLE_DEVICES
        #   value: "none"
        # image: test_ai_upscale_service
        ports:
        - containerPort: 8000
        resources:
          limits:
            nvidia.com/gpu: 1
